--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <title>HomeWork Helper</title>
 </head>
 <body>
-    
-        <div>
+        <center><img src="logo.png" id="logo"></center>
+        
+        <div id="e">
+
     <form action="https://www.youtube.com/results">
-        <input type="text" name="search_query">
+        <input type="text" placeholder="Type in your homework query here" name="search_query" id="searchBar">
     </form>
         </div>
 
