--- a/index.html
+++ b/index.html
@@ -16,10 +16,23 @@
         
         <div id="e">
 
-    <form action="https://www.youtube.com/results">
-        <input type="text" placeholder="Type in your homework query here" name="search_query" id="searchBar">
+    <form action="https://www.google.com/search">
+        <input type="text" placeholder="Type in your homework query here (Google)" name="q" class="searchBar" id="google">
     </form>
+
+    <form action="https://www.youtube.com/results">
+        <input type="text" placeholder="Type in your homework query here (YouTube)" name="search_query" class="searchBar" id="yt">
+    </form>
+    <div id="button">
+        <div id="NCERT">
+        <center> <a href="https://ncert.nic.in/textbook.php"><button id="ncert"> <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <lottie-player src="https://assets2.lottiefiles.com/temp/lf20_aKAfIn.json" mode="bounce" background="transparent"  speed="1"  style="width: 200px; height: 200px;"  loop  autoplay></lottie-player> NCERT Books </button> </a> </center>
         </div>
+
+        <div id="disc">
+        <center> <a href="https://discord.gg/homework"><button id="discord"><img src="disc.png">Discord Homework Server</button></a></center>
+        </div>
+    </div>
 
 </body> 
 </html>
