--- a/index.html
+++ b/index.html
@@ -27,21 +27,25 @@
     
     <div id="button1">
 
-      <!-- <div id="NCERT"> -->
-
         <div class="button">    
             <a href="https://ncert.nic.in/textbook.php"><button id="ncert"> <img src="book.gif"><figcaption>  NCERT Books </figcaption> </button> </a> 
         </div>
 
-      <!-- </div> -->
+        <div class="button">
+            <a href="https://quizizz.com/"><button id="quizizz"><img src="quizizz.png">Quizizz</button> </a>
+        </div>
 
-      <!-- <div id="disc"> -->
+        <div class="button">
+            <a href="https://kahoot.com/"><button id="kahoot"><img src="kahoot.png">Kahoot</button></a>
+        </div>
+
+        <div class="button">
+            <a href="https://www.udemy.com"><button id="udemy"><img src="udemy.png">Udemy</button></a>
+        </div>
 
         <div class="button">    
             <a href="https://discord.gg/homework"> <button id="discord"><img src="disc.png"> <figcaption> Discord Homework Server </figcaption></button></a>
         </div>
-
-      <!-- </div> -->
 
     </div>
     
