centered searchbars on phone

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
         <center><img src="logo.png" id="logo"></center>
         
-    <div id="e">
+    <div id="searches">
+
     <form action="https://www.google.com/search">
         <input type="text" placeholder="Type in your homework query here (Google)" name="q" class="searchBar" id="google">
     </form>
@@ -24,6 +25,7 @@
     <form action="https://www.youtube.com/results">
         <input type="text" placeholder="Type in your homework query here (YouTube)" name="search_query" class="searchBar" id="yt">
     </form>
+
     </div>
 
     
