--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         
     <div id="searches">
 
-    <form action="https://www.google.com/search">
+    <form action="https://www.google.com/search" target="_blank">
         <input type="text" placeholder="Type in your homework query here (Google)" name="q" class="searchBar" id="google">
     </form>
 
-    <form action="https://www.youtube.com/results">
+    <form action="https://www.youtube.com/results" target="_blank">
         <input type="text" placeholder="Type in your homework query here (YouTube)" name="search_query" class="searchBar" id="yt">
     </form>
 
@@ -32,23 +32,23 @@
     <div id="button1">
 
         <div class="button">    
-            <a href="https://ncert.nic.in/textbook.php"><button id="ncert"> <img src="book.gif"><figcaption>  NCERT Books </figcaption> </button> </a> 
+            <a href="https://ncert.nic.in/textbook.php" target="_blank"><button id="ncert"> <img src="book.gif"><figcaption>  NCERT Books </figcaption> </button> </a> 
         </div>
 
         <div class="button">
-            <a href="https://quizizz.com/"><button id="quizizz"><img src="quizizz.png">Quizizz</button> </a>
+            <a href="https://quizizz.com/" target="_blank"><button id="quizizz"><img src="quizizz.png">Quizizz</button> </a>
         </div>
 
         <div class="button">
-            <a href="https://kahoot.com/"><button id="kahoot"><img src="kahoot.png">Kahoot</button></a>
+            <a href="https://kahoot.com/" target="_blank"><button id="kahoot"><img src="kahoot.png">Kahoot</button></a>
         </div>
 
         <div class="button">
-            <a href="https://www.udemy.com"><button id="udemy"><img src="udemy.png">Udemy</button></a>
+            <a href="https://www.udemy.com" target="_blank"><button id="udemy"><img src="udemy.png">Udemy</button></a>
         </div>
 
         <div class="button">    
-            <a href="https://discord.gg/homework"> <button id="discord"><img src="disc.png"> <figcaption> Discord Homework Server </figcaption></button></a>
+            <a href="https://discord.gg/homework" target="_blank"> <button id="discord"><img src="disc.png"> <figcaption> Discord Homework Server </figcaption></button></a>
         </div>
 
     </div>
